# oca-ocb-core

./: README.md
docs/: PATCH_ADDONS_PATH.md
odoo-bringout-oca-ocb-analytic/: README.md  pyproject.toml
odoo-bringout-oca-ocb-association/: README.md  pyproject.toml
odoo-bringout-oca-ocb-attachment_indexation/: README.md  pyproject.toml
odoo-bringout-oca-ocb-base/: README.md  pyproject.toml
odoo-bringout-oca-ocb-base/doc/: ARCHITECTURE.md  BASE_ADDON.md  CLI.md  CONFIG.md  DATABASE_INIT.md  ENTERPRISE_REMOVE.md  FAQ.md  HTTP.md  MODULES.md  ORM.md  OVERVIEW.md  PATCH_PDFWRITER.md  PATCH_PYPDF2_PDFWRITER.md  SECURITY.md  STARTUP.md  TROUBLESHOOTING.md
odoo-bringout-oca-ocb-base/odoo/: http.py
odoo-bringout-oca-ocb-base/odoo/addons/base/: __init__.py  __manifest__.py
odoo-bringout-oca-ocb-base/odoo/addons/base/data/: ir_module_category_data.xml
odoo-bringout-oca-ocb-base/odoo/addons/base/i18n/: bs.po  fr.po
odoo-bringout-oca-ocb-base/odoo/addons/base/models/: ir_actions_report.py  ir_ui_view.py
odoo-bringout-oca-ocb-base/odoo/addons/base/tests/: __init__.py  test_pdf.py
odoo-bringout-oca-ocb-base/odoo/addons/base/views/: ir_module_views.xml
odoo-bringout-oca-ocb-base/odoo/tools/: misc.py  pdf.py  pdf.py.backup
odoo-bringout-oca-ocb-base_address_extended/: README.md  pyproject.toml
odoo-bringout-oca-ocb-base_automation/: README.md  pyproject.toml
odoo-bringout-oca-ocb-base_geolocalize/: README.md  pyproject.toml
odoo-bringout-oca-ocb-base_iban/: README.md  pyproject.toml
odoo-bringout-oca-ocb-base_import/: README.md  pyproject.toml
odoo-bringout-oca-ocb-base_import_module/: README.md  pyproject.toml
odoo-bringout-oca-ocb-base_install_request/: README.md  pyproject.toml
odoo-bringout-oca-ocb-base_setup/: README.md  pyproject.toml
odoo-bringout-oca-ocb-base_sparse_field/: README.md  pyproject.toml
odoo-bringout-oca-ocb-base_vat/: README.md  pyproject.toml
odoo-bringout-oca-ocb-board/: README.md  pyproject.toml
odoo-bringout-oca-ocb-bus/: README.md  pyproject.toml
odoo-bringout-oca-ocb-data_recycle/: README.md  pyproject.toml
odoo-bringout-oca-ocb-digest/: README.md  pyproject.toml
odoo-bringout-oca-ocb-digest/digest/i18n/: bs.po
odoo-bringout-oca-ocb-digest/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-event/: README.md  pyproject.toml
odoo-bringout-oca-ocb-event_booth/: README.md  pyproject.toml
odoo-bringout-oca-ocb-event_crm/: README.md  pyproject.toml
odoo-bringout-oca-ocb-http_routing/: README.md  pyproject.toml
odoo-bringout-oca-ocb-link_tracker/: README.md  pyproject.toml
odoo-bringout-oca-ocb-loyalty/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mail/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mail_bot/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mail_bot_hr/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mail_group/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mail_plugin/: README.md  pyproject.toml
odoo-bringout-oca-ocb-onboarding/: README.md  pyproject.toml
odoo-bringout-oca-ocb-partner_autocomplete/: README.md  pyproject.toml
odoo-bringout-oca-ocb-payment/: README.md  pyproject.toml
odoo-bringout-oca-ocb-payment_custom/: README.md  pyproject.toml
odoo-bringout-oca-ocb-phone_validation/: README.md  pyproject.toml
odoo-bringout-oca-ocb-phone_validation/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-oca-ocb-phone_validation/phone_validation/i18n/: bs.po
odoo-bringout-oca-ocb-privacy_lookup/: README.md  pyproject.toml
odoo-bringout-oca-ocb-purchase/: README.md  pyproject.toml
odoo-bringout-oca-ocb-purchase_mrp/: README.md  pyproject.toml
odoo-bringout-oca-ocb-purchase_price_diff/: README.md  pyproject.toml
odoo-bringout-oca-ocb-purchase_product_matrix/: README.md  pyproject.toml
odoo-bringout-oca-ocb-purchase_requisition/: README.md  pyproject.toml
odoo-bringout-oca-ocb-rating/: README.md  pyproject.toml
odoo-bringout-oca-ocb-repair/: README.md  pyproject.toml
odoo-bringout-oca-ocb-resource/: README.md  pyproject.toml
(+488 files in other folders)
