[project]
name = "odoo-bringout-oca-ocb-base"
version = "16.0.0"
description = "Odoo Community Backports (OCB) Base - Core Odoo runtime packaged for pythonic development"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "Babel>=2.9.1",
    "chardet>=4.0.0",
    "cryptography>=3.4.8",
    "decorator>=4.4.2",
    "docutils>=0.16",
    "Jinja2>=2.11.3",
    "lxml>=4.6.5",
    "MarkupSafe>=1.1.1",
    "passlib>=1.7.4",
    "Pillow>=9.0.1",
    "polib>=1.1.0",
    "psutil>=5.8.0",
    "psycopg2-binary>=2.7.7",
    "python-dateutil>=2.8.1",
    "pytz",
    "requests>=2.25.1",
    "Werkzeug>=0.16.1",
    "PyPDF2>=2.0.0",
    "reportlab>=3.5.0",
    "num2words>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.scripts]
odoo = "odoo.cli:main"

[project.urls]
homepage = "https://github.com/bringout/odoo-bringout-oca-ocb-base"
repository = "https://github.com/bringout/odoo-bringout-oca-ocb-base"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["odoo"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
